[gd_scene load_steps=13 format=3 uid="uid://ls0o0fycav6i"]

[ext_resource type="Script" uid="uid://b56kbrqcs5g53" path="res://player/player.gd" id="1_08wn2"]
[ext_resource type="Texture2D" uid="uid://dgiy2joykr4h2" path="res://assets/char/main/WizardCharAnim(BackWalk) _0001.png" id="2_vffo5"]
[ext_resource type="Texture2D" uid="uid://bs480o6tf1j4m" path="res://assets/char/main/WizardCharAnim(BackWalk) _0002.png" id="3_xnxr4"]
[ext_resource type="Texture2D" uid="uid://dg3lvreeemth1" path="res://assets/char/main/WizardCharAnim(FrontWalk) _0001.png" id="4_tf1bx"]
[ext_resource type="Texture2D" uid="uid://bglpmpe12w3u5" path="res://assets/char/main/WizardCharAnim(FrontWalk) _0002.png" id="5_ruho7"]
[ext_resource type="Texture2D" uid="uid://b487si87xotpj" path="res://assets/char/main/WizardCharAnim(SideWalk) _0001.png" id="6_hnmhd"]
[ext_resource type="Texture2D" uid="uid://ceh8qkcpxhnbq" path="res://assets/char/main/WizardCharAnim(SideWalk) _0002.png" id="7_wnera"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y1xfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vffo5")
}, {
"duration": 1.0,
"texture": ExtResource("3_xnxr4")
}, {
"duration": 1.0,
"texture": ExtResource("4_tf1bx")
}, {
"duration": 1.0,
"texture": ExtResource("5_ruho7")
}, {
"duration": 1.0,
"texture": ExtResource("6_hnmhd")
}, {
"duration": 1.0,
"texture": ExtResource("7_wnera")
}],
"loop": true,
"name": &"All Sprites",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vffo5")
}, {
"duration": 1.0,
"texture": ExtResource("3_xnxr4")
}],
"loop": true,
"name": &"BackWalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tf1bx")
}, {
"duration": 1.0,
"texture": ExtResource("5_ruho7")
}],
"loop": true,
"name": &"FrontWalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tf1bx")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hnmhd")
}, {
"duration": 1.0,
"texture": ExtResource("7_wnera")
}],
"loop": true,
"name": &"SideWalk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ls8ch"]
size = Vector2(39, 41)

[sub_resource type="CanvasTexture" id="CanvasTexture_d65h5"]

[sub_resource type="Curve" id="Curve_urea7"]
_data = [Vector2(0.0280899, 0.120879), 0.0, 0.0, 0, 0, Vector2(0.252809, 0.681319), -7.04176, -7.04176, 0, 0, Vector2(0.887641, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_jo8bk"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0.0674157, -0.67033), 0.0, 0.0, 0, 0, Vector2(0.97191, 0.0109891), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_08wn2")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y1xfu")
animation = &"Idle"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_ls8ch")

[node name="NearRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 80)
collision_mask = 6

[node name="FarRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 146)
collision_mask = 6

[node name="MagicParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
texture = SubResource("CanvasTexture_d65h5")
one_shot = true
preprocess = 0.2
explosiveness = 1.0
randomness = 0.4
lifetime_randomness = 0.6
emission_shape = 3
emission_rect_extents = Vector2(20, 32)
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
radial_accel_min = -2.0
radial_accel_max = 2.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_urea7")
color = Color(0.301961, 0.537255, 1, 1)
hue_variation_max = 0.8
hue_variation_curve = SubResource("Curve_jo8bk")
